--- a/landing 3/css/awesome.css
+++ b/landing 3/css/awesome.css
@@ -1,8 +1,9 @@
 .row {
-  padding-bottom: 109px;
   display: flex;
   margin: 0 -15px;
   justify-content: space-between;
+  padding-top: 68px;
+  /*padding-bottom: 109px;*/
 }
 
 .awesome-item {
