--- a/landing 3/css/axure.css
+++ b/landing 3/css/axure.css
@@ -1,11 +1,13 @@
 .axure {
   width: 100%;
   padding-top: 58px;
+  padding-bottom: 49px;
   /*background-image: ;*/
-  background: url("/img/bg/axurefon.png") no-repeat;
+  background: url("../img/bg/axurefon.png") no-repeat;
   background-position: center;
   background-size: cover;
   position: relative;
+  display: flex;
 }
 
 .axure::after {
@@ -46,22 +48,6 @@
   margin-bottom: 57px;
 }
 
-.axurebutton {
-  /*margin-top: 57px;*/
-  padding-bottom: 38px;
-  width: 135px;
-  height: 42px;
+.center {
   margin: auto;
-  border: 1px solid rgba(196, 196, 196, 0);
-  background-clip: border-box;
-}
-
-.axurebutton a {
-  /*line-height: 42px;*/
-  font-size: 15px;
-  color: rgba(255, 255, 255, 1);
-  font-family: Open sans, sans-serif;
-  font-weight: 600;
-  /*text-align: center;
-  vertical-align: middle;*/
 }
