--- a/landing 3/css/style.css
+++ b/landing 3/css/style.css
@@ -2,6 +2,9 @@
 @import url(../css/price.css);
 @import url(../css/customers.css);
 @import url(../css/axure.css);
+@import url(../css/nav.css);
+@import url(../css/header.css);
+@import url(../css/social.css);
 
 * {
   margin: 0; /*сброс отступов*/
@@ -11,9 +14,18 @@
   box-sizing: border-box; /*дает получить заданные размеры*/
 }
 
+.nav {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 1);
+}
+
 .header {
   width: 100%;
-  background-color: rgb(255, 255, 255);
+}
+
+.social-icons {
+  width: 100%;
+  background-color: rgba(248, 239, 239, 1);
 }
 
 .awesome {
@@ -38,7 +50,7 @@
 
 .container {
   max-width: 1170px;
-  margin: auto; /*выравнивание по центру*/
+  /*margin: auto; /*выравнивание по центру*/
   padding: 0 15px; /*поля сверху-снизу и справа и слева*/
 }
 
@@ -68,6 +80,38 @@
   font-weight: 400;
   text-align: center;
   /*margin-bottom: 67px;*/
+}
+
+.item-text {
+  font-size: 14px; /*размер шрифта 14*/
+  color: rgb(0, 0, 0); /*цвет #*/
+  font-family: open sans, sans-serif; /*подключен шифр с жирностью 700*/
+  font-weight: 400;
+  text-align: center; /*выравнивание строки по центру*/
+  /*font-style: unset;*/
+}
+
+.button {
+  /*margin-top: 57px;*/
+  /*padding-bottom: 38px;*/
+  width: 135px;
+  height: 42px;
+  /*margin: auto;*/
+  border: 1px solid rgba(196, 196, 196, 1);
+}
+
+.button a {
+  line-height: 40px;
+  font-size: 15px;
+  color: rgba(255, 255, 255, 1);
+  font-family: Open sans, sans-serif;
+  font-weight: 600;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.logotexttl {
+  color: rgba(217, 137, 67, 1);
 }
 
 */ .footer {
