--- a/landing 3/css/awesome.css
+++ b/landing 3/css/awesome.css
@@ -1,4 +1,12 @@
-.row {
+.awesome {
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  padding-top: 100px;
+  padding-bottom: 109px;
+  /*margin: 0 -15px;*/
+}
+
+.awesome-row {
   display: flex;
   margin: 0 -15px;
   justify-content: space-between;
@@ -31,4 +39,13 @@
   font-weight: 700;
   text-align: center; /*выравнивание строки по центру*/
   margin-bottom: 16px;
+}
+
+.item-text {
+  font-size: 14px;
+  color: rgb(0, 0, 0);
+  font-family: open sans, sans-serif;
+  font-weight: 400;
+  text-align: center;
+  /*font-style: unset;*/
 }
