--- a/landing 3/css/header.css
+++ b/landing 3/css/header.css
@@ -1,13 +1,11 @@
 .header {
   width: 100%;
-  padding-top: 109px;
-  padding-bottom: 101px;
-  /*background-image: ;*/
   background: url("../img/bg/axurefon.png") no-repeat;
   background-position: center;
   background-size: cover;
   position: relative;
-  /*display: flex;*/
+  padding-top: 101px;
+  padding-bottom: 101px;
 }
 
 .header::after {
@@ -20,48 +18,44 @@
   top: 0;
   left: 0;
 }
+
 .header-container {
-  /*max-width: 1170px*/
-  justify-content: space-between;
-  /*margin: auto; /*выравнивание по центру*/
-  /*padding: 0 60px 0 90px; /*поля сверху-снизу и справа и слева*/
+  max-width: 1170px;
+  margin: auto;
+  padding: 0 15px;
   position: relative;
   z-index: 1;
-
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-
-  padding: 0 60px;
+  /*padding: 0 60px;*/
 }
 
 .title-block {
-  /*width: 50%;*/
-  flex: 50%;
   display: flex;
-  /*padding-top: 109px;
-  padding-bottom: 101px;*/
+  flex: 50%;
   flex-direction: column;
-  margin-bottom: 20px;
+  margin: 0 0 0 -15px;
+  padding-right: 20px;
 }
 
 .header-title {
-  font-size: 60px; /*размер шрифта 60*/
-  font-family: Roboto, sans-serif; /*подключен шифр с жирностью 400*/
+  font-size: 60px;
+  font-family: Roboto, sans-serif;
   font-weight: 400;
   color: rgba(255, 255, 255, 1);
-  text-align: left; /*выравнивание строки по центру*/
+  text-align: left;
   /*vertical-align: top;*/
   text-transform: uppercase;
   margin-bottom: 32px;
 }
 
 .header-description {
-  font-size: 36px; /*размер шрифта 36*/
-  font-family: Raleway, sans-serif; /*подключен шифр с жирностью 400*/
+  font-size: 36px;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   color: rgba(255, 255, 255, 1);
-  text-align: left; /*выравнивание строки по центру*/
+  text-align: left;
   /*vertical-align: top;*/
   text-transform: uppercase;
   margin-bottom: 32px;
@@ -85,9 +79,9 @@
 }
 
 .form-block {
-  /*width: 50%;*/
-  flex: 50%;
+  margin: 0 -15px 0 0;
   display: flex;
+  flex: 50%;
   /*justify-content: center;*/
   /*padding-top: 111px;
   padding-bottom: 120px;*/
@@ -105,12 +99,11 @@
 }
 
 .title-form {
-  font-size: 20px; /*размер шрифта 60*/
-  font-family: Open Sans, sans-serif; /*подключен шифр с жирностью 400*/
+  font-size: 20px;
+  font-family: Open Sans, sans-serif;
   font-weight: 700;
   color: rgba(36, 33, 32, 1);
-  text-align: center; /*выравнивание строки по центру*/
-  /*vertical-align: top;*/
+  text-align: center;
   text-transform: initial;
   /*margin-bottom: 32px;*/
   /*padding-top: 13px;
@@ -139,16 +132,8 @@
   top: 38px;
   left: 0px;*/
   border: none;
+  cursor: pointer;
 }
-
-/*
-.formbutton a {
-  font-size: 15px;
-  font-family: Open Sans, sans-serif; 
-  font-weight: 600;
-  color: rgba(255, 255, 255, 1);
-}
-*/
 
 input[type="text"] {
   width: 100%;
