--- a/landing 3/css/nav.css
+++ b/landing 3/css/nav.css
@@ -1,35 +1,43 @@
+.nav {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 1);
+  padding: 20px 0px;
+}
+
 .nav-row {
   display: flex;
   margin: 0 -15px;
   justify-content: space-between;
-  padding-left: 90px;
-  padding-right: 21px; /*60-39=21*/
+  /*text-align: center;
+  /*padding-left: 90px;
+  padding-right: 21px;*/
 }
 
-.logo {
-  padding-top: 20px;
-  padding-bottom: 19px;
+.logotip {
+  /*padding-top: 20px;
+  padding-bottom: 19px;*/
   text-transform: uppercase;
   font-family: Raleway, sans-serif;
   font-size: 30px;
   font-weight: 400;
   color: rgba(255, 255, 255, 1);
+  text-align: left;
 }
 
 .nav-items {
-  padding-top: 25px;
-  padding-bottom: 25px;
+  display: flex;
+  align-items: center;
 }
 
 .items {
   display: flex;
-  direction: row;
+  flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
 }
 
 .items a {
-  margin-right: 39px;
+  margin-left: 39px;
   font-family: Open Sans, sans-serif;
   font-size: 15px;
   font-weight: 600;
@@ -38,15 +46,6 @@
   border-left: 1px solid rgba(255, 255, 255, 1);
 }
 
-/*.items a: :last-child {
+.items a:last-child {
   margin-right: 0px;
-}*/ /*Вопрос: почему не работает*/
-
-/*.nav-item::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  display: block;
-  position: absolute;
-  margin-right: 0px;
-}*/
+} /*Вопрос: почему не работал, когда у items a был margin-right . Чтобы ряд прилегал к правому краю, заменила margin-right на margin-left*/
