--- a/landing 3/css/price.css
+++ b/landing 3/css/price.css
@@ -1,3 +1,10 @@
+.price {
+  width: 100%;
+  background-color: rgb(233, 233, 233); /*#e5e5e5*/
+  padding-top: 80px;
+  padding-bottom: 70px;
+}
+
 .price-row {
   display: flex;
   margin: 0 -15px;
@@ -15,6 +22,7 @@
   margin-right: 15px;
   width: 340px;
   padding-bottom: 10px;
+  box-shadow: 4px 0px 10px 0px rgba(221, 140, 47, 0.8);
   }
 
   .price-card:last-child{
