--- a/landing 2 old/css/contacts.css
+++ b/landing 2 old/css/contacts.css
@@ -1,7 +1,8 @@
-.footer {
+.contacts {
   width: 100%;
   background-color: rgb(255, 255, 255);
   padding-top: 80px;
+  padding-bottom: 44px;
 }
 
 .footer-row {
@@ -71,36 +72,4 @@ input[type="text"] {
   font-family: Open Sans, sans-serif; /*подключен шифр с жирностью 400*/
   font-weight: 400;
   color: rgba(189, 189, 189, 1);
-}
-
-.footer-icons {
-  width: 100%;
-  background-color: rgba(0, 0, 0, 1);
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  padding: 0 15px;
-  padding-top: 30px;
-  padding-bottom: 18px;
-}
-
-.footer-icones {
-  display: flex;
-  flex-direction: row;
-  font-size: 23px;
-  color: rgba(255, 255, 255, 1);
-  font-family: open sans, sans-serif;
-  font-weight: 400;
-  margin: auto;
-  justify-content: center;
-  padding-right: 15px;
-  margin-bottom: 15px;
-}
-
-.lower {
-  font-family: open sans, sans-serif;
-  font-weight: 400;
-  text-align: center;
-  font-size: 12px;
-  color: rgba(255, 255, 255, 0.5);
 }
