--- a/landing 2 old/css/style.css
+++ b/landing 2 old/css/style.css
@@ -5,6 +5,7 @@
 @import url(../css/nav.css);
 @import url(../css/header.css);
 @import url(../css/social.css);
+@import url(../css/contacts.css);
 @import url(../css/footer.css);
 
 * {
@@ -17,8 +18,8 @@
 
 .container {
   max-width: 1170px;
-  margin: auto; /*выравнивание по центру*/
-  padding: 0 15px; /*поля сверху-снизу и справа и слева*/
+  margin: auto;
+  padding: 0 15px;
 }
 
 .logotipstyle {
