--- a/landing 2/css/nav.css
+++ b/landing 2/css/nav.css
@@ -2,10 +2,10 @@
   width: 100%;
   background-color: rgba(0, 0, 0, 1);
   padding: 1.25em 0em;
-  position: fixed;
+  /*position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 10;*/
 }
 
 .nav-row {
@@ -68,4 +68,14 @@
 }
 
 @media screen and (max-width: 600px) {
+  .nav-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nav-items {
+    display: flex;
+    flex-direction: column;
+  }
 }
