--- a/landing 2/css/header.css
+++ b/landing 2/css/header.css
@@ -21,9 +21,6 @@
 }
 
 .header-container {
-  /*max-width: 1170px;
-  margin: auto;
-  padding: 0 15px;*/
   position: relative;
   z-index: 1;
 }
@@ -32,12 +29,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /*padding: 0 0.94rem;*/
   flex-wrap: nowrap;
 }
 
 .header-block {
-  width: 50%;
+  width: 60%;
   flex-direction: column;
   justify-content: space-between;
   flex-wrap: nowrap;
@@ -66,20 +62,11 @@
 .header-title::after {
   content: " ";
   width: 4.18rem;
-  /*
-  height: 0.06rem;
-  */
-  /*background-color: rgba(255, 255, 255, 1);*/
   border-bottom: 1px solid #fff;
-  /*display: inline-block;*/
-
   padding-bottom: 2.43rem;
-
   position: absolute;
   left: 0;
   top: 100%;
-  /*text-align: left;*/
-  /*flex-wrap: wrap;*/
 }
 
 .header-text {
@@ -102,7 +89,8 @@
 .form-block {
   margin: 0 -0.94rem 0 0; /*?*/
   display: flex;
-  flex: 50%;
+  flex-direction: column;
+  flex: 40%;
   justify-content: flex-end;
   margin-bottom: 1.25rem;
   padding-right: 0.94rem;
@@ -110,7 +98,8 @@
 
 .form-container {
   background-color: rgba(255, 255, 255, 1);
-  /*width: 23.13rem;*/
+  width: 100%;
+  max-width: 23rem;
   border-radius: 0.5rem;
 }
 
@@ -122,44 +111,37 @@
   text-align: center;
   text-transform: initial;
   margin-bottom: 2rem;
-  /*padding-top: 13px;
-  padding-bottom: 13px;*/
   padding: 0.94rem 0;
 }
 
-/*.hr {
-  border-bottom: 0.06rem solid rgba(189, 189, 189, 1);
-}*/
+.form-fields {
+  width: 85%;
+  margin: auto;
+  padding-bottom: 1.5rem;
+}
 
-.hr {
-  margin: 0 3.6rem 1.19rem 3.6rem;
+.form-field {
+  padding-bottom: 1.5rem;
 }
 
 .hrl {
   margin: 0 3.6rem 2.98rem 3.6rem;
-  /*padding-bottom: 1.19rem;*/
-  /*margin-bottom: 4.94rem;
-  /*border-bottom: 0rem;*/
 }
 
 input[type="text"],
 input[type="password"] {
   width: 100%;
-  /*padding: 0 0.94rem;*/
-  display: inline-block;
-  border: none;
-  background: rgba(255, 255, 255, 1);
-  padding: 0 3.6rem;
+  border: 0;
+  outline: 0;
+  background: transparent;
+  border-bottom: 1px solid rgba(189, 189, 189, 1);
 }
 
-label[for="name"],
-label[for="email"],
-label[for="password"] {
+label {
   font-family: Open Sans, sans-serif;
   font-size: 0.88rem;
   font-weight: 400;
   color: rgba(189, 189, 189, 1);
-  padding: 0 3.6rem;
 }
 
 input[type="text"]:focus,
@@ -176,7 +158,6 @@ input[type="password"]:focus {
   border: none;
   cursor: pointer;
   width: 100%;
-  /* margin-top: 2rem;*/
 }
 
 @media screen and (max-width: 600px) {
@@ -198,7 +179,8 @@ input[type="password"]:focus {
   }
 
   .header-title::after {
-    left: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .btn {
