--- a/landing 2/css/nav.css
+++ b/landing 2/css/nav.css
@@ -2,10 +2,10 @@
   width: 100%;
   background-color: rgba(0, 0, 0, 1);
   padding: 1.25em 0em;
-  /*position: fixed;
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;*/
+  z-index: 10;
 }
 
 .nav-row {
@@ -13,7 +13,6 @@
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: nowrap;
-  /* padding: 0 5.62rem; */
 }
 
 .logotip {
