--- a/landing 2/css/style.css
+++ b/landing 2/css/style.css
@@ -39,22 +39,19 @@
   color: rgba(33, 33, 33, 1);
   text-align: center;
   margin: auto;
-  margin-bottom: 2.13rem;
+  margin-bottom: 2.5rem;
+  position: relative;
 }
 
 .title::after {
   content: " ";
-  width: 4.18rem;
-  height: 0.13rem;
-  background-color: rgba(231, 36, 36, 1);
-  display: inline-block;
-  text-align: center;
-  white-space: normal;
-  margin-top: 2.13rem;
-  /*margin-bottom: 3rem;*/ /*4.25*/
-  /*position: absolute;
-  text-align: center;
-  flex-wrap: wrap;*/
+  width: 4rem;
+  border-bottom: 1px solid rgba(231, 36, 36, 1);
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-bottom: 1.5rem;
 }
 
 .description {
