--- a/landing 3/css/footer.css
+++ b/landing 3/css/footer.css
@@ -12,12 +12,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 72px 200px 72px 200px;
+  padding: 72px 150px 72px 150px;
 }
 
 .location {
   flex-direction: column;
-  margin-right: 200px;
+  width: 20%;
+  margin-right: 15%;
 }
 
 .footer-title {
@@ -41,7 +42,8 @@
 
 .social-icons {
   flex-direction: column;
-  margin-right: 100px;
+  width: 20%;
+  margin-right: 15%;
 }
 
 .footer-icons {
@@ -59,6 +61,10 @@
   font-size: 15px;
   color: #ffffff;
   padding: 13px 0;
+}
+
+.about {
+  width: 30%;
 }
 
 .copyright {
@@ -89,6 +95,97 @@
   flex-direction: column;
   /*justify-content: space-between;*/
   padding: 30px 0 29px 0;
+}
+
+@media screen and (max-width: 1154px) {
+  .footer-top-row {
+    padding: 60px 140px 60px 140px;
+  }
+}
+
+@media screen and (max-width: 1015px) {
+  .footer-top-row {
+    padding: 60px 120px 60px 120px;
+  }
+
+  .footer-title {
+    font-size: 13px;
+    margin-bottom: 20px;
+  }
+
+  .footer-text {
+    font-size: 13px;
+    margin-bottom: 20px;
+  }
+
+  .footer-icon i {
+    font-size: 13px;
+    /*padding: 13px 0;*/
+  }
+}
+
+@media screen and (max-width: 923px) {
+  .footer-top-row {
+    padding: 50px 100px 50px 100px;
+  }
+
+  .footer-title {
+    margin-bottom: 16px;
+  }
+
+  .footer-text {
+    margin-bottom: 16px;
+  }
+
+  .footer-icon i {
+    font-size: 12px;
+    /*padding: 13px 0;*/
+  }
+}
+
+@media screen and (max-width: 883px) {
+  .footer-top-row {
+    padding: 50px 40px 30px 40px;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .location {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .social-icons {
+    width: 100%;
+  }
+
+  .about {
+    width: 100%;
+  }
+  .footer-title {
+    margin-bottom: 10px;
+  }
+
+  .footer-text {
+    margin-bottom: 30px;
+  }
+
+  .footer-icons {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  .footer-icon {
+    height: 35px;
+    width: 35px;
+  }
+}
+
+@media screen and (max-width: 455px) {
+  .footer-icon i {
+    font-size: 14px;
+    /*padding: 13px 0;*/
+  }
 }
 
 @media screen and (max-width: 372px) {
